# resume-tailor

./: .env.example  .gitignore  PROGRESS.md  README.md  SPEC.md  docker-compose.yml  resume-tailor.html
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  resumes.py
backend/app/core/: encryption.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: resume.py  user.py
backend/app/schemas/: resume.py  user.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/ui/: alert.tsx
frontend/src/pages/: Dashboard.tsx  JDAnalyzer.tsx  Login.tsx  Register.tsx  ResumeEdit.tsx  ResumeNew.tsx
frontend/src/services/: api.ts  resume.ts
frontend/src/stores/: auth.ts
frontend/src/utils/: ai.ts  export.ts  storage.ts
